--- a/.editorconfig
+++ b/.editorconfig
@@ -204,9 +204,9 @@ dotnet_naming_rule.local_variables_should_be_camelcase.severity = suggestion
 dotnet_naming_rule.local_variables_should_be_camelcase.symbols = local_variables
 dotnet_naming_rule.local_variables_should_be_camelcase.style = camelcase
 
-dotnet_naming_rule.local_constants_should_be_camelcase.severity = suggestion
-dotnet_naming_rule.local_constants_should_be_camelcase.symbols = local_constants
-dotnet_naming_rule.local_constants_should_be_camelcase.style = camelcase
+dotnet_naming_rule.local_constants_should_be_pascalcase.severity = suggestion
+dotnet_naming_rule.local_constants_should_be_pascalcase.symbols = local_constants
+dotnet_naming_rule.local_constants_should_be_pascalcase.style = pascalcase
 
 dotnet_naming_rule.parameters_should_be_camelcase.severity = suggestion
 dotnet_naming_rule.parameters_should_be_camelcase.symbols = parameters
@@ -224,13 +224,13 @@ dotnet_naming_rule.private_static_fields_should_be_camelcase.severity = suggesti
 dotnet_naming_rule.private_static_fields_should_be_camelcase.symbols = private_static_fields
 dotnet_naming_rule.private_static_fields_should_be_camelcase.style = _camelcase
 
-dotnet_naming_rule.public_constant_fields_should_be_camelcase.severity = suggestion
-dotnet_naming_rule.public_constant_fields_should_be_camelcase.symbols = public_constant_fields
-dotnet_naming_rule.public_constant_fields_should_be_camelcase.style = _camelcase
+dotnet_naming_rule.public_constant_fields_should_be_pascalcase.severity = suggestion
+dotnet_naming_rule.public_constant_fields_should_be_pascalcase.symbols = public_constant_fields
+dotnet_naming_rule.public_constant_fields_should_be_pascalcase.style = pascalcase
 
 dotnet_naming_rule.private_constant_fields_should_be_pascalcase.severity = suggestion
 dotnet_naming_rule.private_constant_fields_should_be_pascalcase.symbols = private_constant_fields
-dotnet_naming_rule.private_constant_fields_should_be_pascalcase.style = pascalcase
+dotnet_naming_rule.private_constant_fields_should_be_pascalcase.style = _pascalcase
 
 dotnet_naming_rule.public_static_readonly_fields_should_be_camelcase.severity = suggestion
 dotnet_naming_rule.public_static_readonly_fields_should_be_camelcase.symbols = public_static_readonly_fields
