--- a/src/ThreeDModels/Format/Ctm/ThreeDModels.Format.Ctm.csproj
+++ b/src/ThreeDModels/Format/Ctm/ThreeDModels.Format.Ctm.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PackageId>ThreeDModels.Format.Ctm</PackageId>
+    <PackageId>B3zaleel.ThreeDModels.Format.Ctm</PackageId>
     <Version>0.1.0</Version>
     <Authors>B3zaleel</Authors>
     <Description>Load and Export .ctm files.</Description>
